# dynaforge.ai

./: .gitignore  Makefile  PROGRESS.md  QA_POLICY.yaml  README.md  TRACABILITY.md  TRACEABILITY.md  loop-plan.json  pyproject.toml
.codex/: assistance-style.md  config.yaml  rules.yaml
.codexa/: README.md  config.yaml  lazy_index.py  manifest.json
agents/: designer.py  implementer.py  project_manager.py  tester.py
analysis/: change_zones.md  intent_map.md  system_manifest.yaml
audit/: __init__.py  commands.jsonl  concerns.jsonl  doctor_config.jsonl  handoff.jsonl  handoff_discovery.jsonl  handoff_ms01_phase0.jsonl  logger.py  retention.jsonl  sample_handoff.jsonl
backlog/: _c_speckit_comparison.md  code_discovery.md  efficent_ai_usage.md  efficient_updates.md  existing_code_base.md  ms03_operating_model_tasks.md  operating_model.md  prompt_chaining_architecture.md  retro_followups_ch001.md  review_process.md  story_board.md  time_metrics.md
codexa/: __init__.py  __main__.py  cli.py  config_tools.py  manifest_builder.py  reporting.py  status.py
design/: DESIGN_SPEC.md  MS-02_storyboard.md
docs/: AGENTS_RACI.md  ARCHITECTURE.md  CHANGE_REQUEST_001.1.md  CHANGE_REQUEST_001.2.md  CHANGE_REQUEST_001.3.md  CHANGE_REQUEST_001.md  CHANGE_REQUEST_004_operating_model.md  CODEXA_WORKFLOW.md  CR001_2_REQUIREMENT_IMPACT.md  CR001_3_REQUIREMENT_IMPACT.md  CR001_REQUIREMENT_IMPACT.md  CR004_REQUIREMENT_IMPACT.md  DYNAFORGE_WORKFLOW.md  IMPLEMENTATION_PLAN.md  MATURITY_LEVEL.md  MS02_PHASE0_PLAN.md  OVERLORD_WORFLOW.md  PHASE0_DEMO_OVERVIEW.md  PHASE0_PLAN.md  QA_REPORT.md  (+17 more)
(+296 files in other folders)
